--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
     <header class="cabecalho">
         <span class="cabecalho--menu-hamburguer"></span>
-        <h2>a educação no campo</h2>
-
+        <h2>a educação no campo</h2
 
     </header>
 </body>
