--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <span class="cabecalho--menu-hamburguer"></span>
     </label>
     <ul class="lista-menu">
-    <li class="lista-menu--item
+    <li class="lista-menu--item">HOME</li>
+    <li class="lista-menu--item">ScrAtch</li>
+    <li class="lista-menu--item"></li>
     </ul>
 </div>
         <h2 class="cabecalho--titulo"> a educação no campo</h2>
