--- a/index.html
+++ b/index.html
@@ -24,5 +24,9 @@
 
         
     </header>
+    <section class="conteudo-1">
+        <img src="./img/images 1.png" alt="">
+        <p>a educaçao é um fator fundamental para nossa sociedade</p>
+    </section>
 </body>
 </html>
