--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@
         <img src="./img/images 1.png" alt="">
         <p>a educaçao é um fator fundamental para nossa sociedade</p>
     </section>
+    <section class="conteudo1">
+        <p>a FAZER TEXTO</p>
+        <img src="./img/download 1.png" alt="">
+    </section>
 </body>
 </html>
