--- a/index.html
+++ b/index.html
@@ -32,5 +32,9 @@
         <p>a FAZER TEXTO</p>
         <img src="./img/download 1.png" alt="">
     </section>
+    <section class="conteudo1">
+        <img src="./img/download 2.png" alt="">
+        <p> FAZER TEXTO `2</p>
+    </section>
 </body>
 </html>
