--- a/index.html
+++ b/index.html
@@ -36,5 +36,8 @@
         <img src="./img/download 2.png" alt="">
         <p> FAZER TEXTO `2</p>
     </section>
+    <footer>
+        <img src="./img/rodape.jpeg" alt="">
+    </footer>
 </body>
 </html>
