--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <section class="conteudo1">
         <img src="./img/images 1.png" alt="">
-        <p>a educaçao é um fator fundamental para nossa sociedade</p>
+        <p>As condições socioeconômicas também desempenham um papel significativo. Muitas famílias rurais enfrentam dificuldades financeiras que impactam a capacidade de compra de materiais escolares e o suporte educativo adequado em casa. A necessidade de trabalhar em atividades agrícolas ou pecuárias pode reduzir o tempo disponível para o estudo e o apoio dos pais no acompanhamento das atividades escolares.</p>
     </section>
     <section class="conteudo1">
         <p>a FAZER TEXTO</p>
