--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     </section>
     <section class="conteudo1">
         <img src="./img/download 2.png" alt="">
-        <p> FAZER TEXTO `2</p>
+        <p>As condições socioeconômicas também desempenham um papel significativo. Muitas famílias rurais enfrentam dificuldades financeiras que impactam a capacidade de compra de materiais escolares e o suporte educativo adequado em casa. A necessidade de trabalhar em atividades agrícolas ou pecuárias pode reduzir o tempo disponível para o estudo e o apoio dos pais no acompanhamento das atividades escolares.
+
+            Além disso, as escolas rurais muitas vezes enfrentam problemas com a formação e retenção de professores qualificados, o que pode afetar a qualidade do ensino. O isolamento geográfico e a falta de infraestrutura também podem dificultar a implementação de programas de formação continuada para os educadores.</p>
     </section>
     <footer>
        
