--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </section>
     <section class="conteudo1">
         <img src="./img/download 2.png" alt="">
-        <p> texto 3</p>
+        <p>Apesar dessas dificuldades, iniciativas para melhorar a educação rural incluem programas de capacitação para professores, investimentos em infraestrutura escolar e a implementação de tecnologias educacionais adaptadas para essas realidades. Tais esforços visam proporcionar uma educação mais equitativa e acessível para as crianças do campo, reconhecendo a importância de superar os obstáculos e promover um futuro mais promissor para essas comunidades.</p>
     </section>
     <footer>
        
