--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         
     </header>
     <section class="conteudo1">
-        <img src="./img/images 1.png" alt="">
+        <img src="./img/images 1.png" alt="" class="tamanho-img1">
         <p>As condições socioeconômicas também desempenham um papel significativo. Muitas famílias rurais enfrentam dificuldades financeiras que impactam a capacidade de compra de materiais escolares e o suporte educativo adequado em casa. A necessidade de trabalhar em atividades agrícolas ou pecuárias pode reduzir o tempo disponível para o estudo e o apoio dos pais no acompanhamento das atividades escolares.</p>
     </section>
     <section class="conteudo1">
