--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         <p>As condições socioeconômicas também desempenham um papel significativo. Muitas famílias rurais enfrentam dificuldades financeiras que impactam a capacidade de compra de materiais escolares e o suporte educativo adequado em casa. A necessidade de trabalhar em atividades agrícolas ou pecuárias pode reduzir o tempo disponível para o estudo e o apoio dos pais no acompanhamento das atividades escolares.
 
             Além disso, as escolas rurais muitas vezes enfrentam problemas com a formação e retenção de professores qualificados, o que pode afetar a qualidade do ensino. O isolamento geográfico e a falta de infraestrutura também podem dificultar a implementação de programas de formação continuada para os educadores.</p>
-        <img src="./img/download 1.png" alt="">
+        <img src="./img/download 1.png" alt="" class="tamanho-img2">
     </section>
     <section class="conteudo1">
     </section class="tamanho-img2">
     <section class="tamanho-img3">
-        <img src="./img/download 2.png" alt="">
+        <img src="./img/download 2.png" alt="" class="tamanho-img3">
         <p>Apesar dessas dificuldades, iniciativas para melhorar a educação rural incluem programas de capacitação para professores, investimentos em infraestrutura escolar e a implementação de tecnologias educacionais adaptadas para essas realidades. Tais esforços visam proporcionar uma educação mais equitativa e acessível para as crianças do campo, reconhecendo a importância de superar os obstáculos e promover um futuro mais promissor para essas comunidades.</p>
     <footer>
        
