--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <div>
+        <div class="menu-humb">
         <input type="checkbox" name="menu" id="menu" class="container--botao">
         <label for="menu">
         <span class="cabecalho--menu-hamburguer"></span>
